--- a/OOP Defining Classes/SoftwareUniversityLearningSystem/SoftwareUniversityLearningSystem.csproj
+++ b/OOP Defining Classes/SoftwareUniversityLearningSystem/SoftwareUniversityLearningSystem.csproj
@@ -41,8 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CurrentStudent.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeniorTrainer.cs" />
+    <Compile Include="Student.cs" />
     <Compile Include="Trainer.cs" />
   </ItemGroup>
   <ItemGroup>
