--- a/OOP Defining Classes/SoftwareUniversityLearningSystem/SoftwareUniversityLearningSystem.csproj
+++ b/OOP Defining Classes/SoftwareUniversityLearningSystem/SoftwareUniversityLearningSystem.csproj
@@ -42,14 +42,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CurrentStudent.cs" />
+    <Compile Include="DropoutStudent.cs" />
+    <Compile Include="GraduateStudent.cs" />
+    <Compile Include="JuniorTrainer.cs" />
+    <Compile Include="OnlineStudent.cs" />
+    <Compile Include="OnsiteStudent.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeniorTrainer.cs" />
     <Compile Include="Student.cs" />
+    <Compile Include="SULSTest.cs" />
     <Compile Include="Trainer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
