--- a/OOP-Exception-Handling/EnterNumbers/EnterNumbers.csproj
+++ b/OOP-Exception-Handling/EnterNumbers/EnterNumbers.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomUserException.cs" />
     <Compile Include="EnterNumbers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
