--- a/OOP-Encapsulation-Polymorphism/Shapes/Shapes.csproj
+++ b/OOP-Encapsulation-Polymorphism/Shapes/Shapes.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\BasicShape.cs" />
+    <Compile Include="Classes\Circle.cs" />
     <Compile Include="Classes\Rectangle.cs" />
     <Compile Include="Classes\Rhombus.cs" />
     <Compile Include="Interfaces\IShape.cs" />
