Galactic GPS added

--- a/OOP-Other-Types/GalacticGPS/GalacticGPS.csproj
+++ b/OOP-Other-Types/GalacticGPS/GalacticGPS.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="GalacticGps.cs" />
     <Compile Include="Location.cs" />
+    <Compile Include="Planet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
