--- a/OOP-Encapsulation-Polymorphism/TheSlum-Skeleton/TheSlum.csproj
+++ b/OOP-Encapsulation-Polymorphism/TheSlum-Skeleton/TheSlum.csproj
@@ -51,15 +51,17 @@
     <Compile Include="Models\Characters\Healer.cs" />
     <Compile Include="Models\Characters\Mage.cs" />
     <Compile Include="Models\Characters\Warrior.cs" />
+    <Compile Include="Models\Items\Axe.cs" />
+    <Compile Include="Models\Items\Injection.cs" />
+    <Compile Include="Models\Items\Pill.cs" />
+    <Compile Include="Models\Items\Shield.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Team.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\Items\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
