--- a/OOP-Encapsulation-Polymorphism/TheSlum-Skeleton/TheSlum.csproj
+++ b/OOP-Encapsulation-Polymorphism/TheSlum-Skeleton/TheSlum.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Bonus.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="GameEngine\AdditionalEngine.cs" />
     <Compile Include="GameEngine\Engine.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="Interfaces\IAttack.cs" />
