--- a/High-Quality-Code/Naming-Identifiers-Homework/Application2/Minesweeper.csproj
+++ b/High-Quality-Code/Naming-Identifiers-Homework/Application2/Minesweeper.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{E2B7BED8-5433-40ED-9870-4E775782E5ED}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Application2</RootNamespace>
+    <RootNamespace>Minesweeper</RootNamespace>
     <AssemblyName>Application2</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="MainProgram.cs" />
+    <Compile Include="Minesweeper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ranking.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
